changed sin to cos in formula

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 						<table class="fraction" align="center" cellpadding="10" cellspacing="10">
 					    <tr>
 					        <td rowspan="2" nowrap="nowrap">
-					            &sum; = a<sub>1</sub> sin
+					            &sum; = a<sub>1</sub> cos
 					        </td>
 					        <td rowspan="2" nowrap="nowrap" class="function">
 					            (
@@ -98,7 +98,7 @@
 					            )
 					        </td>
 					        <td rowspan="2" nowrap="nowrap">
-					            &plus; a<sub>2</sub> sin
+					            &plus; a<sub>2</sub> cos
 					        </td>
 					        <td rowspan="2" nowrap="nowrap" class="function">
 					            (
