--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
 							<div id="amplitude-{i}" class="noUi-extended"></div>
 							<div class="input-group">
 								<span class="input-group-addon">a<sub>{i}</sub> (m):</span>
-								<input type="text" tabindex="" name="amplitude_{i}" class="form-control" placeholder="Amplitude of {i}">
+								<input type="text" tabindex="{i}" name="amplitude_{i}" class="form-control" placeholder="Amplitude of {i}">
 							</div>
 							<br>
 
 							<div id="phase-{i}" class="noUi-extended"></div>
 							<div class="input-group">
 								<span class="input-group-addon">&phi;<sub>{i}</sub> / 2&pi;:</span>
-								<input type="text" tabindex="" name="phase_{i}" class="form-control" placeholder="Phase of {i}">
+								<input type="text" tabindex="{i}" name="phase_{i}" class="form-control" placeholder="Phase of {i}">
 							</div>
 						</div>
 					</div>
@@ -72,10 +72,10 @@
 						<button class="btn btn-default btn-block" id="M2M4">M2 <small>(12.42hrs)</small> + M4 <small>(6.21hrs)</small></button>
 						<div class="btn-group-justified">
 						<div class="btn-group">
-							<button class="btn btn-default" id="sawTooth">Skewness</button>
+							<button class="btn btn-default" id="skewness">Skewness</button>
 						</div>
 						<div class="btn-group">
-							<button class="btn btn-default" id="aSymmetric">Asymmetry</button>
+							<button class="btn btn-default" id="asymmetric">Asymmetry</button>
 						</div>
 						</div>
 						<br>
