--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 					<!-- template of a form item -->
 					<div id="template" style="display: none;">
-						<div class="col-sm-12 col-xs-12">
+						<div class="col-sm-6 col-xs-12">
 							<div id="period-{i}" class="noUi-extended"></div>
 							<div class="input-group">
 								<span class="input-group-addon">T<sub>{i}</sub> (s):</span>
@@ -61,10 +61,10 @@
 
 					<div class="actions col-sm-12 col-xs-12">
 						<div class="row">
-							<div class="col-md-6">
+							<div class="col-md-6 col-sm-6">
 								<a class="btn btn-default btn-block" href="">Reset</a>
 							</div>
-							<div class="col-md-6">
+							<div class="col-md-6 col-sm-6">
 								<button type="submit" name="" class="btn btn-primary btn-block">Draw</button>
 							</div>
 						</div>
