--- a/index.html
+++ b/index.html
@@ -60,75 +60,97 @@
 					<!-- / template of a form item -->
 
 					<div class="actions col-sm-12 col-xs-12">
-						<div class="row">
-							<div class="col-md-6 col-sm-6">
+						<h5>Predefined settings</h5>
+
+						<button class="btn btn-default btn-block margin-bottom" id="M2M4">M2 <small>(12.42hrs)</small> + M4 <small>(6.21hrs)</small></button>
+
+						<button class="btn btn-default btn-block margin-bottom" id="M2S2">M2 <small>(12.42hrs)</small> + S2 <small>(12hrs)</small></button>
+
+						<div class="btn-group-justified">
+							<div class="btn-group">
+								<button class="btn btn-default" id="skewness">Skewness</button>
+							</div>
+							<div class="btn-group">
+								<button class="btn btn-default" id="asymmetric">Asymmetry</button>
+							</div>
+						</div>
+
+						<table class="fraction" align="center" cellpadding="10" cellspacing="10">
+						    <tr>
+						        <td rowspan="2" nowrap="nowrap">
+						            &sum; = a<sub>1</sub> cos
+						        </td>
+						        <td rowspan="2" nowrap="nowrap" class="function">
+						            (
+						        </td>
+						        <td nowrap="nowrap">
+						            2 &pi;
+						        </td>
+						        <td rowspan="2" nowrap="nowrap">
+						            <i>t</i> &minus; &phi;<sub>1</sub>
+						        </td>
+						        <td rowspan="2" nowrap="nowrap" class="function">
+						            )
+						        </td>
+						        <td rowspan="2" nowrap="nowrap">
+						            &plus; a<sub>2</sub> cos
+						        </td>
+						        <td rowspan="2" nowrap="nowrap" class="function">
+						            (
+						        </td>
+						        <td nowrap="nowrap">
+						            2 &pi;
+						        </td>
+						        <td rowspan="2" nowrap="nowrap">
+						            <i>t</i> &minus; &phi;<sub>2</sub>
+						        </td>
+						        <td rowspan="2" nowrap="nowrap" class="function">
+						            )
+						        </td>
+						    </tr>
+						    <tr>
+						        <td class="upper-line">
+						            T<sub>1</sub>
+						        </td>
+						        <td class="upper-line">
+						            T<sub>2</sub>
+						        </td>
+						    </tr>
+						</table>
+					</div>
+
+					<div class="actions col-sm-12 col-xs-12">
+						<div id="periods" class="noUi-extended"></div>
+						<div class="input-group margin-bottom">
+							<span class="input-group-addon">Number of periods:</span>
+							<input type="text" tabindex="" name="periods" class="form-control" placeholder="Number of periods">
+						</div>
+						<div class="btn-group-justified">
+							<div class="btn-group">
 								<a class="btn btn-default btn-block" href="">Reset</a>
 							</div>
-							<div class="col-md-6 col-sm-6">
+							<div class="btn-group">
 								<button type="submit" name="" class="btn btn-primary btn-block">Draw</button>
 							</div>
 						</div>
-						<h5>Predefined settings</h5>
-						<button class="btn btn-default btn-block" id="M2M4">M2 <small>(12.42hrs)</small> + M4 <small>(6.21hrs)</small></button>
-						<div class="btn-group-justified">
-						<div class="btn-group">
-							<button class="btn btn-default" id="skewness">Skewness</button>
-						</div>
-						<div class="btn-group">
-							<button class="btn btn-default" id="asymmetric">Asymmetry</button>
-						</div>
-						</div>
-						<br>
 
-						<table class="fraction" align="center" cellpadding="10" cellspacing="10">
-					    <tr>
-					        <td rowspan="2" nowrap="nowrap">
-					            &sum; = a<sub>1</sub> cos
-					        </td>
-					        <td rowspan="2" nowrap="nowrap" class="function">
-					            (
-					        </td>
-					        <td nowrap="nowrap">
-					            2 &pi;
-					        </td>
-					        <td rowspan="2" nowrap="nowrap">
-					            <i>t</i> &minus; &phi;<sub>1</sub>
-					        </td>
-					        <td rowspan="2" nowrap="nowrap" class="function">
-					            )
-					        </td>
-					        <td rowspan="2" nowrap="nowrap">
-					            &plus; a<sub>2</sub> cos
-					        </td>
-					        <td rowspan="2" nowrap="nowrap" class="function">
-					            (
-					        </td>
-					        <td nowrap="nowrap">
-					            2 &pi;
-					        </td>
-					        <td rowspan="2" nowrap="nowrap">
-					            <i>t</i> &minus; &phi;<sub>2</sub>
-					        </td>
-					        <td rowspan="2" nowrap="nowrap" class="function">
-					            )
-					        </td>
-					    </tr>
-					    <tr>
-					        <td class="upper-line">
-					            T<sub>1</sub>
-					        </td>
-					        <td class="upper-line">
-					            T<sub>2</sub>
-					        </td>
-					    </tr>
-					</table>
+						<br>
+						<p>Check out these graphs on Desmos</p>
+						<ul class="">
+							<li>
+								<a href="https://www.desmos.com/calculator/3tncepda7c" rel="nofollow" target="_blank">M2 + S2 on Desmos</a>
+							</li>
+							<li>
+								<a href="https://www.desmos.com/calculator/mia1iez9y9" rel="nofollow" target="_blank">M2 + M4 on Desmos</a>
+							</li>
+						</ul>
 					</div>
 				</form>
 			</div>
 		</div>
 		<!--div style="width: 1140px; heigth: 300px"-->
-		<canvas id="single" width="2280" height="500" style="width: 1140px; heigth: 250px"></canvas>
-		<canvas id="summed" width="2280" height="500" style="width: 1140px; heigth: 250px"></canvas>
+		<canvas id="single" width="2280" height="600" style="width: 1140px; heigth: 300px"></canvas>
+		<canvas id="summed" width="2280" height="600" style="width: 1140px; heigth: 300px"></canvas>
 		<!--/div-->
 	</div>
 </body>
