--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
 						<p>Check out these graphs on Desmos</p>
 						<ul class="">
 							<li>
-								<a href="https://www.desmos.com/calculator/3tncepda7c" rel="nofollow" target="_blank">M2 + S2 on Desmos</a>
+								<a href="https://www.desmos.com/calculator/3tncepda7c" rel="nofollow" target="_blank">M2 + S2</a>
 							</li>
 							<li>
-								<a href="https://www.desmos.com/calculator/mia1iez9y9" rel="nofollow" target="_blank">M2 + M4 on Desmos</a>
+								<a href="https://www.desmos.com/calculator/mia1iez9y9" rel="nofollow" target="_blank">M2 + M4</a>
 							</li>
 						</ul>
 					</div>
