--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 						<button class="btn btn-default btn-block margin-bottom" id="M2S2">M2 <small>(12.42hrs)</small> + S2 <small>(12hrs)</small></button>
 
 						<div class="btn-group-justified">
-							<div class="btn-group">
+							<div class="btn-group"  data-toggle="tooltip" data-placement="top" title="Asymmetry around horizontal axis">
 								<button class="btn btn-default" id="skewness">Skewness</button>
 							</div>
-							<div class="btn-group">
+							<div class="btn-group" data-toggle="tooltip" data-placement="top" title="Asymmetry around vertical axis">
 								<button class="btn btn-default" id="asymmetric">Asymmetry</button>
 							</div>
 						</div>
@@ -156,6 +156,10 @@
 </body>
 
 <script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <script src="assets/slider/jquery.nouislider.all.min.js"></script>
+<script>$(function () {
+  $('[data-toggle="tooltip"]').tooltip({container: 'body'})
+})</script>
 <script src="assets/modulation.min.js"></script>
 </html>
